--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,10 @@ body {
   animation-delay: 0.8s;
 }
 
+.row.current > div.filled {
+  animation: bounce 0.2s ease-in-out forwards;
+}
+
 @keyframes flip {
   0% {
     transform: rotateX(0);
@@ -81,5 +85,19 @@ body {
     background: var(--background);
     border-color: var(--border-color);
     color: white;
+  }
+}
+
+@keyframes bounce {
+  0% {
+    transform: scale(1);
+    border-color: #ddd;
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+    border-color: #333;
   }
 }
